<resources>
    <string name="app_name">Daysee</string>
    <string name="action_settings">Settings</string>
    <!-- Setting -->
    <string name="title_setting">設定</string>
    <string name="title_channel_list">チャンネル一覧</string>
    <string name="title_recipe_list">アイディア一覧</string>
    <string name="title_mobile_data">モバイルデータ通信</string>
    <string name="title_policy">利用規約・プライバシーポリシー</string>
    <string name="title_help">ヘルプ</string>
    <string name="title_qa">お問い合わせ</string>
    <string name="title_send_email">Send mail...</string>
    <string name="title_email_support">daysee-support@curations.jp</string>
    <string name="title_email_subject">件名: Dayseeに関するお問い合わせ</string>
    <string name="title_body">本文:</string>
    <string name="title_line">------</string>
    <string name="title_not_remove_below">ここから先は削除しないでください。</string>
    <string name="title_os">OS:</string>
    <string name="title_benlly_version">Version:</string>
    <string name="title_user_id">UserID:</string>
    <string name="action_close">Close</string>
    <!-- Dialog -->
    <string name="msg_message">モバイルデータ通信を許可しますか？\n\n登録したアイディアがカメラを利用する場合に、バックグラウンドでモバイルデータ通信を使用します。</string>
    <string name="msg_ok">OK</string>
    <string name="msg_cancel">キャンセル</string>
    <string name="msg_google_play_service_not_support">Google Play services is not supported</string>
    <!-- Channel -->
    <string name="title_step_1">Step.1：きっかけを選ぶ</string>
    <string name="title_step_2">Step.2：アクションを選ぶ</string>
    <string name="title_step_3">Step.3：アイディアを登録</string>
    <string name="msg_create_idea">アイディアの登録を\n中止しますか?</string>
</resources>